# Text-editor

./: CMakeLists.txt  colorutility.c  colorutility.h  datatypes.h  datautility.c  datautility.h  dictionary.c  dictionary.h  handler.c  handler.h  hashtable.c  hashtable.h  iodata.c  iodata.h  ioutility.c  ioutility.h  main.c  memutilility.c  memutilility.h  memutility.c  memutility.h  rmnumsutility.c  rmnumsutility.h  temp.cpp  utility.c  utility.h
